--- a/ESSULauncher/ESSULauncher/ESSULauncher.csproj
+++ b/ESSULauncher/ESSULauncher/ESSULauncher.csproj
@@ -56,7 +56,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>icon.ico</ApplicationIcon>
+    <ApplicationIcon>steam_icon_Iy6_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -109,6 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
+    <Content Include="steam_icon_Iy6_icon.ico" />
     <None Include="Resources\JustGotEnhanced.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
