--- a/ESSU/ESSU/bin/x64/Release/settings.cfg
+++ b/ESSU/ESSU/bin/x64/Release/settings.cfg
@@ -2,4 +2,4 @@ lang:en_US
 startwin:Store
 runboot:Unchecked
 steamappdir:C:\Program Files (x86)\Steam\steamapps
-steamexe:C:\Program Files (x86)\Steam\Steam.exe
+steamexe:Steam.exe
